# gw-mf-pinn

./: .gitignore  Makefile  README.md  cpp_test.py  requirements.txt  run.py  setup_gw_mf_pinn.bat
configs/: baseline_cnn.yaml  data.yaml  train_mf.yaml  train_pinn.yaml  viz3d.yaml
engine_calc/: CMakeLists.txt
engine_calc/src/: cauchy.py  engine.cpp  engine.hpp  main.cpp
reports/baseline_ml/20251010-144249/: classification_report_test.txt  metrics.json  scores_test.parquet  thresholds.json
reports/baseline_ml/20251013-113517/: classification_report_test.txt  metrics.json  model.joblib  scores_test.parquet  thresholds.json
reports/baseline_ml/20251013-114622/: metrics.json
reports/baseline_ml/20251013-133101/: metrics.json
reports/baseline_ml/20251013-140708/: classification_report_test.txt  metrics.json
reports/baseline_ml/20251013-140759/: metrics.json  model.joblib  scores_test.parquet  thresholds.json
reports/baseline_ml/20251013-140837/: metrics.json
scripts/: .env.example  bootstrap_gpu.sh  cuda_env.sh  reorg.sh  repair_cuda_libs.sh  repair_wsl_cuda_gpu.sh  run_pipeline.sh  run_weekend_alpha.sh
src/: debug_win.py  gwosc_data.yaml  run.py
src/accel/: .rendered.ncc_fft.cpp  __init__.py  ncc_fft.cpp  ncc_stub.py  whiten.py
src/eval/: baseline_ml.py  coinc_far.py  compare.py  dataset_builder.py  metrics.py  mf_baseline.py  mf_psd.py  quick_probe.py
src/exp/: dump_scores_latest.py  mf2_far_sweep.py  mf2_hardneg_dump.py  mf2_long_train.py  mf2_multi_seed.py  sensitivity.py
src/gwdata/: gwosc_client.py  gwosc_doc.yaml  preprocess.py  windows.py
src/mf/: train_stage2_mf.py
src/models/: baselines.py  losses.py  mf_pinn.py  pinn.py
src/physics/: CMakeLists.txt  __init__.py  gwphys_bindings.cpp  gwphys_cuda.cu  setup.py
src/sim/: post_newtonian.py  templates.py
src/tools/: fix_windows_meta.py  inspect_mf_failures.py  inventory.py  retrofit_subset.py  viz3d_demo.py
src/training/: __init__.py  train_mf.py  train_pinn.py
src/utils/: prof.py
src/viz/: insight_views.py  ligo_overlay.py  plot_scores_timeline.py  plots.py  spectro_quick.py  timefreq.py  vizualization_3d.py  waveview.py
tests/: conftest.py  cpp_test.py  nvidia_cupy.py  test_accel.py  test_imports.py  test_mf_pipeline.py  test_preselect.py
(+46 files in other folders)
